# pks

./: .gitignore  .mcp.json  Cargo.toml  LICENSE  README.md  claudei.sh  prometheus_journal_2026-03-20.md  prometheus_journal_2026-03-27.md  tarpaulin-report.json
.agent/rules/: GEMINI.md  constitution.md  global.md
.agent/workflows/: commit.md  constitution_check.md  deploy_prod.md  deploy_stg.md  double-check.md  install-context-mode.md  pair-xp.md  (+6 more)
.claude/: settings.json  squad-manifest.json  squad-run-context.md.bak
ci-dashboard/: config.json
deploy/: README.md  com.pks.daemon.plist  pks.service
docs/: PRD_prometheus_knowledge_system.md  pks_diagram.html
src/: auth.rs  boot_indexer.rs  circuit_breaker.rs  conflict_resolver.rs  daemon.rs  debounce.rs  doctor.rs  embedding_provider.rs  execute_tool.rs  fifo_embedder.rs  fifo_pipeline.rs  git_branch.rs  git_journal.rs  git_journal_append.rs  git_journal_append_tests.rs  git_journal_date.rs  health.rs  knowledge_writer.rs  lib.rs  lru_manager.rs  main.rs  mcp_server.rs  memory_manager.rs  memory_writer.rs  observability.rs  recovery.rs  recovery_reconcile.rs  remote_sync.rs  repo_watcher.rs  snapshot.rs  state.rs  storage_policy.rs  vault_init.rs
tests/: git_journal_harness.rs  golden_queries.toml  integration_harness.rs  pks_execute_integration_test.rs  shadow_journal_e2e.rs  singleton_ipc_test.rs  test_backpressure.rs  test_bare_commit.rs  test_chunking.rs  test_full_pipeline_e2e.rs  test_init_e2e.rs  test_mcp_e2e.rs  test_repo_identity.rs  test_search.rs  test_snapshot_filter.rs  test_tracker_sync.rs
(+132 files in other folders)
