[package]
name = "pks"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "pks"
path = "src/main.rs"

[lib]
name = "pks"
path = "src/lib.rs"

[dependencies]
tantivy = "0.22"
pulldown-cmark = "0.11"
bincode = "1.3"
notify = "6.1"
git2 = "0.19"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
tracing-appender = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
dotenvy = "0.15"
rmcp = { version = "1.1", features = ["server", "transport-streamable-http-server", "transport-io", "macros"] }
axum = { version = "0.8", features = ["http1", "tokio"] }
schemars = "1.0"
tokio-util = { version = "0.7", features = ["rt"] }
reqwest = { version = "0.12", features = ["json", "blocking"] }

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
tempfile = "3"
toml = "0.8"

[features]
integration = []
